# malloc_world_with_SDL

./: .gitignore  CMakeLists.txt
ext/SDL2/include/: SDL_thread.h
resources/: save.txt
src/: battles.c  cli.c  main.c  map.c  monsters.c  move.c  player.c  save.c  sdl_functions.c  structures.c
src/include/: battles.h  cli.h  move.h  save.h  sdl_functions.h  structures.h
